tests/semantic/invalid/duplicate_variable_local.src
fn main() -> void {
    int a;
    int a;
}