tests/semantic/invalid/duplicate_variable_local.expected
semantic error at duplicate_variable_local.src:3:5: variable 'a' already declared in this scope
  note: previously declared at 2:5